names has been updated

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🧠 Memory Game </title>
     <link rel="stylesheet" href="stylegame.css">
-    <script src="memorygame.js" defer></script>
+    <script src="scriptgame.js" defer></script>
     <link rel="icon" type="image/x-icon" href="images/icon2.png">
 </head>
 <body>
