--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <h3>Here is the link:</h3>
 
                     <nav>
-                        <a href="memogame.html"> Memory Game </a>
+                        <a href="game.html"> Memory Game </a>
                     </nav>
                 </div>
 
