--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 
                 <center>
                     <h2>My Social Media Accounts:</h2>
-                    <a href="https://www.instagram.com/aleyna.pol/" target="_blank">
+                    <a href>
                         <img src="images/instalogo.png" alt="instagram logo" class="socialmedia">
                     </a>
-                    <a href="https://twitter.com/aleynapolat0" target="_blank">
+                    <a href>
                         <img src="images/twitterlogo.png" alt="twitter logo" class="socialmedia">
                     </a>
-                    <a href="https://www.linkedin.com/in/aleyna-polat/" target="_blank">
+                    <a href>
                         <img src="images/linkedinlogo.png" alt="linkedin logo" class="socialmedia">
                     </a>
                     <a href="https://github.com/itu-itis23-polatal22" target="_blank">
