the folder structure edited and README.md file added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> About Me </title>
-    <link rel="stylesheet" href="styleaboutme.css">
+    <link rel="stylesheet" href="css/styleaboutme.css">
     <link rel="icon" type="image/x-icon" href="images/icon1.svg">
 </head>
 
@@ -52,7 +52,7 @@
                     <h2>What are my academic goals?</h2>
                     <p>I want to finish my school with a high degree and contribute a lot to my profession during the
                         university period.
-                        After graduation, I want to do a master's degree in US and live there as a computer engineer.
+                        After graduation, I want to do a master's degree abroad.
                     </p>
                 </div>
                 <div class="box">
