--- a/game.html
+++ b/game.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🧠 Memory Game </title>
-    <link rel="stylesheet" href="stylegame.css">
-    <script src="scriptgame.js" defer></script>
+    <link rel="stylesheet" href="css/stylegame.css">
+    <script src="js/scriptgame.js" defer></script>
     <link rel="icon" type="image/x-icon" href="images/icon2.png">
 </head>
 <body>
